--- a/templates/iterations.xml
+++ b/templates/iterations.xml
@@ -19,4 +19,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="/" value="/**&#10; *&#10; */" description="注释文本生成" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
 </templateSet>
