--- a/templates/iterations.xml
+++ b/templates/iterations.xml
@@ -1,10 +1,15 @@
 <templateSet group="iterations">
-  <template name="psvmm" value="public static void method (){&#10;&#10;}" description="public staic void method ( )" toReformat="true" toShortenFQNames="true">
+  <template name="psvmm" value="public static void $name$ (){&#10;    $body$&#10;}" description="public staic void method ( )" toReformat="true" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="pvm" value="public void method() {&#10;&#10;}" description="public void method( )" toReformat="true" toShortenFQNames="true">
+  <template name="pvm" value="public void $name$ ($para$) {&#10;    $body$&#10;}" description="public void method( )" toReformat="true" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="para" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
