--- a/templates/user.xml
+++ b/templates/user.xml
@@ -1,12 +1,11 @@
 <templateSet group="user">
-  <template name="pvt" value="@Test&#10;public void test$number$ (){&#10;    $body$&#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true">
+  <template name="test" value="@Test&#10;public void test$number$ (){&#10;    &#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true">
     <variable name="number" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="PVT" value="@Test&#10;public void test$number$ (){&#10;&#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true">
+  <template name="PVT" value="@Test&#10;public void test$number$ (){&#10;&#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true" deactivated="true">
     <variable name="number" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
