IU-2019.3.3 <小甜菜2333@MC Update qaPlugPluginUpdateNotifier.xml, user.xml, _@user_GitHub _Material_.icls

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -5,7 +5,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="PVT" value="@Test&#10;public void test$number$ (){&#10;&#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true" deactivated="true">
+  <template name="pvt" value="@Test&#10;public void test$number$ (){&#10;&#10;}" description="Test测试单元" toReformat="true" toShortenFQNames="true">
     <variable name="number" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
