--- a/templates/user.xml
+++ b/templates/user.xml
@@ -11,7 +11,16 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="/*m" value="/**&#10; * @description: &#10; * @author: $user$&#10; * @data: $date$&#10; */" description="方法注释模板" toReformat="false" toShortenFQNames="true">
+  <template name="/*m" value="/**&#10; * @description: $description$&#10; * @author: $user$&#10; * @data: $date$&#10; */" description="方法注释模板" toReformat="false" toShortenFQNames="true">
+    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="user" expression="user()" defaultValue="" alwaysStopAt="true" />
+    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
+  <template name="/*c" value="/**&#10; * @description: $description$&#10; * @author: $user$&#10; * @data: $date$&#10; */" description="类注释模板" toReformat="false" toShortenFQNames="true">
+    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="user" expression="user()" defaultValue="" alwaysStopAt="true" />
     <variable name="date" expression="date()" defaultValue="" alwaysStopAt="true" />
     <context>
