--- a/templates/user.xml
+++ b/templates/user.xml
@@ -11,10 +11,11 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="/*m" value="/**&#10; * @description: $description$&#10; * @author: $user$&#10; * @data: $date$&#10; */" description="方法注释模板" toReformat="false" toShortenFQNames="true">
+  <template name="/*m" value="/**&#10; * @description: $description$&#10; * @author: $user$&#10; * @data: $date$ $time$&#10; */" description="方法注释模板" toReformat="false" toShortenFQNames="true">
     <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="user" expression="user()" defaultValue="" alwaysStopAt="true" />
     <variable name="date" expression="date()" defaultValue="" alwaysStopAt="true" />
+    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="OTHER" value="true" />
     </context>
