--- a/templates/SQL.xml
+++ b/templates/SQL.xml
@@ -1,11 +1,9 @@
 <templateSet group="SQL">
-  <template name="sfw" value="select $filed$ from $table$ where $alias$.$END$;" description="" toReformat="false" toShortenFQNames="true">
+  <template name="sfw" value="select $filed$ from $table$ where $END$;" description="select  from  where" toReformat="false" toShortenFQNames="true">
     <variable name="filed" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="table" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="alias" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
-      <option name="JAVA_CODE" value="true" />
-      <option name="SQL" value="true" />
+      <option name="OTHER" value="true" />
     </context>
   </template>
 </templateSet>
